bugherd 186: align the checkbox in the export section

--- a/assembl/static2/css/components/exportSection.scss
+++ b/assembl/static2/css/components/exportSection.scss
@@ -1,4 +1,12 @@
 .admin-export-section {
+  input[type='radio'] {
+    margin: 1px 0 0 -20px;
+  }
+
+  input[type='checkbox'] {
+    margin: 2px 0 0 -20px;
+  }
+
   &.admin-box {
     .admin-content {
       text-align: left !important;
